--- a/client/styles/_helpers/_variables.scss
+++ b/client/styles/_helpers/_variables.scss
@@ -3,4 +3,8 @@ $base-font-size: 1.4rem;
 
 //Spacing
 $space: 1.4rem;
+$input-space: 0.3rem;
 $site-max-width: 50rem;
+
+//Colors
+$brand-primary: #232C55;
