--- a/client/styles/base/_general.scss
+++ b/client/styles/base/_general.scss
@@ -1,5 +1,3 @@
-@import '../_helpers/variables';
-
 * {
     margin: 0;
     padding: 0;
@@ -16,10 +14,22 @@ body{
 }
 
 h1{
-    font-weight: 300;
+    color: $brand-primary;
+    font-weight: 600;
     margin: $space;
+    text-align: center;
+    text-transform: uppercase;
 }
 
-ul{
-    list-style: none;
+a{
+    color: black;
+}
+
+input[type=text], input[type=email], input[type=password]{
+    display: table;
+    border: 1px solid #dddddd;
+    font-size: $base-font-size;
+    margin-bottom: $input-space;
+    margin-left: 3rem;
+    padding: 1rem;
 }
