--- a/client/styles/pages/_trip.scss
+++ b/client/styles/pages/_trip.scss
@@ -1,6 +1,6 @@
 .test{
-    height: 20rem;
-    width: 20rem;
-    background-color: blue;
+    height: 50rem;
+    width: 50rem;
+    background-color: grey;
     
 }
