--- a/client/styles/pages/_trip.scss
+++ b/client/styles/pages/_trip.scss
@@ -1,6 +1,15 @@
-.test{
-    height: 50rem;
-    width: 50rem;
-    background-color: grey;
+.cc-trip__entry{
+    height: 10rem;
+    margin: 2rem;
+    width: 60rem;
+    background-color: #E6EFFB;
     
+}
+
+.cc-trip__details{
+    margin: 1rem;
+}
+
+.cc-trip_button{
+    float: right;
 }
